fixed padding on small devices

--- a/_sass/base/_functional.scss
+++ b/_sass/base/_functional.scss
@@ -48,6 +48,12 @@
   }
 
   &.bold.below-hr {
+    padding-top: 25px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .section-heading.bold.below-hr {
     padding-top: 50px;
   }
 }
