--- a/_sass/base/_reset.scss
+++ b/_sass/base/_reset.scss
@@ -8,5 +8,11 @@ body {
 }
 
 section {
-  padding: 100px 0;
+  padding: 75px 0;
+}
+
+@media only screen and (min-width: 768px) {
+  section {
+    padding: 100px 0;
+  }
 }
